Add Head Images

--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
 
 
 
-    <!-- RESOURCES/TWITTER -->
+    <!-- RESOURCES/SOCIAL -->
     <section id="resource-twit">
       <div class="row">
         <div class="large-12 small-12 columns">
 
-          <!-- NEWS -->
+          <!-- RESOURCES -->
           <div id="article1" class="large-6 medium-6 small-12 columns">
             <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Hammer laying cris-cross with qrench" longdesc=""></div>
@@ -558,7 +558,7 @@
           </div>
 
 
-          <!-- EVENTS -->
+          <!-- SOCIAL -->
           <div id="article2" class="large-6 medium-6 small-12 columns">
             <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
@@ -596,16 +596,18 @@
           <h2>Cordova Elementary</h2>
           <p>750 North Sanga<br />Cordova, TN 38018<br />
           <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank" alt="Get Directions to Cordova Elementary">Get Directions/View Map</a><br />
-          <span>School Hours:</span> 8:15 AM - 3:15 PM</p>
+          <span>School Hours: </span>8:15 AM - 3:15 PM</p>
         </div>
         <div class="large-3 medium-12 columns">
           <img src="img/divider.png">
         </div>
         <div class="large-3 medium-12 small-12 columns end">
-          <p><span>Kimbrelle B. Lewis, Principal</span><br />
-          <span>Email:</span> <a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
-          <span>Phone:</span> <a href="tel:+19014161700">(901) 416-1700</a><br />
-          <span>Fax:</span> (901) 416-1701</p>
+          <p>
+            <span>Kimbrelle B. Lewis, Principal</span><br />
+            <span>Email: </span><a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
+            <span>Phone: </span><a href="tel:+19014161700">(901) 416-1700</a><br />
+            <span>Fax: </span>(901) 416-1701
+          </p>
         </div>
       </div>
     </footer>
