--- a/faculty.html
+++ b/faculty.html
@@ -184,6 +184,10 @@
                       <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
                     </div>
                   </div>
+
+                  <div class="bckWrap">
+                    <div class="bck"></div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -777,20 +781,21 @@
           <h2>Cordova Elementary</h2>
           <p>750 North Sanga<br />Cordova, TN 38018<br />
           <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank" alt="Get Directions to Cordova Elementary">Get Directions/View Map</a><br />
-          <span>School Hours:</span> 8:15 AM - 3:15 PM</p>
+          <span>School Hours: </span>8:15 AM - 3:15 PM</p>
         </div>
         <div class="large-3 medium-12 columns">
           <img src="img/divider.png">
         </div>
         <div class="large-3 medium-12 small-12 columns end">
-          <p><span>Kimbrelle B. Lewis, Principal</span><br />
-            <span>Email:</span> <a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
-            <span>Phone:</span> <a href="tel:+19014161700">(901) 416-1700</a><br />
-          <span>Fax:</span> (901) 416-1701</p>
+          <p>
+            <span>Kimbrelle B. Lewis, Principal</span><br />
+            <span>Email: </span><a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
+            <span>Phone: </span><a href="tel:+19014161700">(901) 416-1700</a><br />
+            <span>Fax: </span>(901) 416-1701
+          </p>
         </div>
       </div>
     </footer>
-
 
 
 
