Made Changes to Link Names

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               </div>
               <div class="large-3 small-12 columns">
                 <h2 alt="2017-18 CALENDAR"><a href="http://www.scsk12.org/calendar/files/2017/2017-18%20Final.pdf" target="_blank">2017-18 CALENDAR</a></h2>
-                <h2 alt="MENUS"><a href="http://www.scsk12.org/lunch/" target="_blank">MENUS</a></h2>
+                <h2 alt="MENUS"><a href="http://www.scsk12.org/lunch/" target="_blank">LUNCH MENUS</a></h2>
               </div>
               <div class="large-3 small-12 columns">
                 <h2 alt="TRANSPORTATION"><a href="http://www.scsk12.org/transportation/" target="_blank">TRANSPORTATION</a></h2>
@@ -380,7 +380,7 @@
             </div>
 
             <div id="moreArtBTN" class="large-12 small-12 columns">
-              <div class="moreann"><a href="#">Announcements Archive</a></div>
+              <div class="moreann"><a href="#">View More</a></div>
             </div>
         </div>
 
