Made More Changes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               	<li id="linkQuick" class="slideUnder" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary"><a href="#mission">Quick Links</a></li>
               	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#article1">Announcements</a></li>
               	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#article2">Calendar</a></li>
-                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
+                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#resource-twit">Resources</a></li>
               	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a>
                   <ul>
                     <li id="linkAdmin" class="slideUnderDrop"><a href="faculty.html">Administration</a></li>
@@ -171,10 +171,11 @@
                     <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
                     <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
                     <li id="linkLeaders" class="slideUnderDrop"><a href="about.html#globalLeaders">Leaders</a></li>
+                    <li id="linkCourses" class="slideUnderDrop" title="Cordova Elementary Courses" alt="Contact Cordova Elementary"><a href="#">Courses</a></li>
+                    <li id="linkPhoto" class="slideUnderDrop" title="Cordova Elementary Photo Gallery" alt="Contact Cordova Elementary"><a href="#">Photos</a></li>
                   </ul>
                 </li>
-             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerMain">Courses</a></li>
-                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">Athletics</a>
+                <li id="linkAthletics" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="#">Athletics</a>
                   <ul>
                     <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
                     <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
@@ -203,7 +204,7 @@
       <section id="home">
       	<div id="homeWrap" class="row">
           <div id="welcome" class="row">
-            <div class="large-12 small-12 columns">
+            <div class="large-12 small-12">
               <div class="panel">
                 <div class="row">
                   <div class="intro">
@@ -218,24 +219,14 @@
 
       <div id="bck">
           <ul id="bckRotate">
-            <li><img src="img/ce_img1.jpg"></li>
-            <li><img src="img/ce_img2.jpg"></li>
-            <li><img src="img/ce_img3.jpg"></li>
-            <li><img src="img/ce_img4.jpg"></li>
+            <li><img src="img/th_img1.jpg"></li>
+            <li><img src="img/th_img2.jpg"></li>
+            <li><img src="img/th_img3.jpg"></li>
+            <li><img src="img/th_img4.jpg"></li>
           </ul>
       </div>
     </section>
     <!-- END HOME -->
-
-
-
-    <!-- DOWN ARROW -->
-    <div id="downArr">
-      <a href="#mission" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary">
-        <p>Quick Links</p>
-        <img src="img/downArr.png" border="0">
-      </a>
-    </div>
 
 
 
@@ -294,13 +285,13 @@
 
 
 
-    <!-- NEWS/EVENTS-->
-    <section id="news-events">
+    <!-- NEWS -->
+    <section class="news-events">
       <div class="row">
         <div class="large-12 small-12 columns">
 
           <!-- NEWS -->
-          <div id="article1" class="large-12 small-12 columns">
+          <div id="article1" class="large-12 small-12">
             <div id="headContainer">
               <div class="icons"><img src="img/newIcon.png" alt="Newspaper Icon"></div>
               <h1>Announcements</h1>
@@ -371,13 +362,34 @@
               <div class="moreann"><a href="#">View More</a></div>
             </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <!-- END NEWS -->
 
 
-        <!-- EVENTS -->
+
+  <!-- GLOBAL LEADERS -->
+  <section id="global">
+    <div class="large-12">
+      <h1>Developing Global<br />Leaders and Learners</h1>
+      <div class="graphicEle">
+        <img src="img/graphic.png" alt="Small red, horizontal graphic" border="0">
+      </div>
+    </div>
+    <div class="overlay"></div>
+  </section>
+
+
+
+  <!-- EVENTS -->
+  <section class="news-events">
+    <div class="row">
+      <div class="large-12 small-12 columns">
         <div id="article2" class="large-12 small-12">
-          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
+          <div id="headContainer2">
             <div class="icons"><img src="img/calendarIcon.png" alt="Calendar Icon"></div>
-            <h1 class="">Calendar</h1>
+            <h1>Calendar</h1>
             <div class="graphicEle">
               <img src="img/graphic.png" alt="Small red, horizontal graphic" border="0">
             </div>
@@ -392,8 +404,8 @@
                     <h3>11</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Gold-Gain School</h3>
-                    <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                    <h3>Concorde Career‏</h3>
+                    <p>Concorde Career‏ is pleased to host Trezevant High School.</p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -403,8 +415,8 @@
                     <h3>15</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Robotics Team Wins</h3>
-                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <h3>Graduation</h3>
+                    <p>Excited and honored to celebrate graduation with the Trezevant Class of 2017. Excited and honored to celebrate graduation with the Trezevant Class of 2017. </p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -414,8 +426,8 @@
                     <h3>15</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Robotics Team Wins</h3>
-                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <h3>Students Published</h3>
+                    <p>THS students published with the help of Storybooth. THS students published with the help of Storybooth. THS students published with the help of Storybooth.</p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -428,8 +440,8 @@
                     <h3>15</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Spelling Bee</h3>
-                    <p>Congratulations to the spelling bee winners.</p>
+                    <h3>Students Published</h3>
+                    <p>THS students published with the help of Storybooth. THS students published with the help of Storybooth.</p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -439,8 +451,8 @@
                     <h3>16</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Robotics Team Wins</h3>
-                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <h3>Graduation</h3>
+                    <p>Excited and honored to celebrate graduation with the Trezevant High Class of 2017. Excited and honored to celebrate graduation with the Trezevant High Class of 2017.</p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -450,8 +462,8 @@
                     <h3>15</h3>
                   </div>
                   <div class="eventArticle">
-                    <h3>Robotics Team Wins</h3>
-                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <h3>Concorde Career‏</h3>
+                    <p>Concorde Career‏ is pleased to host Trezevant High School. Concorde Career‏ is pleased to host Trezevant High School. Concorde Career‏ is pleased to host Trezevant High School.</p>
                     <div class="readmore"><a href="#">Read more...</a></div>
                   </div>
                 </div>
@@ -465,21 +477,7 @@
         </div>
       </div>
     </section>
-    <!-- END NEWS/EVENTS-->
-
-
-
-    <!-- GLOBAL LEADERS -->
-    <section id="global">
-      <div class="large-12">
-        <div class="icons"><img src="img/globalIcon.png" alt="Icon of half globe with 3 business men on other half" longdesc=""></div>
-        <h1>Developing Global<br />Leaders and Learners</h1>
-        <div class="graphicEle">
-          <img src="img/graphic.png" alt="Small red, horizontal graphic" border="0">
-        </div>
-      </div>
-      <div class="overlay"></div>
-    </section>
+    <!-- END EVENTS -->
 
 
 
@@ -526,7 +524,7 @@
               </div>
             </div>
             <div class="large-12 large-centered small-12">
-              <div class="twitterFeed large-6 large-centered medium-10 medium-centered small-9 small-centered columns end"><a class="twitter-timeline" href="https://twitter.com/CordovaCubs?ref_src=twsrc%5Etfw">Tweets by CordovaCubs</a></div>
+              <div class="twitterFeed large-6 large-centered medium-10 medium-centered small-9 small-centered columns end"><a class="twitter-timeline" href="https://twitter.com/TrezevantHigh?ref_src=twsrc%5Etfw">Tweets by TrezevantHigh</a></div>
             </div>
           </div>
         </div>
@@ -567,6 +565,12 @@
             <span>Fax: </span>(901) 416-3761
           </p>
         </div>
+      </div>
+      <div class="copyrightWrap">
+        <div class="copyright">
+          <div>Shelby County Schools offers educational and employment opportunities without regard to race, color, religion, sex, creed, age, disability, national origin, or genetic information.</div>
+        </div>
+        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
       </div>
     </footer>
 
