--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   			{
   				position: latNlong,
   				map: map,
-  				title:'Cordova Elementary School in Cordova, TN.',
+  				title:'Trezevant High School in Cordova, TN.',
   				icon: 'img/cordovaE_marker.png'
   			});
 
-  			var contentString = 'Cordova Elementary School in Cordova, TN.';
+  			var contentString = 'Trezevant High School in Cordova, TN.';
   			var infowindow = new google.maps.InfoWindow(
   			{
   				content: contentString
@@ -116,21 +116,21 @@
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
           <div id="socialWrap">
-            <div class="phone" alt="Cordova Elementary's phone number"><a href="tel:+19014163760">(901) 416-3760</a></div>
+            <div class="phone" alt="Trezevant High's phone number"><a href="tel:+19014163760">(901) 416-3760</a></div>
             <div id="social" class="icons">
-              <a href="https://www.facebook.com/CordovaElementary?_rdr=p" target="_blank"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
-              <a href="https://twitter.com/CordovaCubs" target="_blank"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
+              <a href="https://www.facebook.com/pages/Trezevant-High-School/607492009362530" target="_blank"><img src="img/facebookIcon.png" alt="Trezevant High's Facebook Page www.facebook.com/pages/Trezevant-High-School/607492009362530"></a>
+              <a href="https://twitter.com/trezevanthigh" target="_blank"><img src="img/twittIcon.png" alt="Trezevant High's Twitter Page twitter.com/trezevanthigh"></a>
             </div>
           </div>
         </div>
 
         <!-- LOGO -->
-      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School Home Page" alt="Cordova Elementary Logo" border="0"></a></div>
+      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Trezevant High School Home Page" alt="Trezevant High Logo" border="0"></a></div>
 
         <!-- SCHOOL NAME -->
         <div class="schoolName">
           <h1>Trezevant High</h1>
-          <div class="graphicEle large-12 columns">
+          <div class="graphicEle large-12">
             <img src="img/graphic.png" alt="Small red, horizontal graphic" border="0">
           </div>
         </div>
@@ -147,42 +147,42 @@
 
             <section class="top-bar-section">
             	<ul id="headMenu">
-              	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Cordova Elementary Home"><a href="#home">Home</a></li>
-              	<li id="linkQuick" class="slideUnder" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary"><a href="#mission">Quick Links</a></li>
-              	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#article1">Announcements</a></li>
-              	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#article2">Calendar</a></li>
-                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#resource-twit">Resources</a></li>
-              	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a>
+              	<li id="linkHome" class="currentLink slideUnder" title="Trezevant High Home" alt="Trezevant High Home"><a href="#home">Home</a></li>
+              	<li id="linkQuick" class="slideUnder" title="Quick Links for Trezevant High" alt="Quick Links for Trezevant High"><a href="#quickLink">Quick Links</a></li>
+              	<li id="linkNews" class="slideUnder" title="Announcements for Trezevant High" alt="Announcements for Trezevant High"><a href="#article1">Announcements</a></li>
+              	<li id="linkCalendar" class="slideUnder" title="Calendar for Trezevant High" alt="Calendar for Trezevant High"><a href="#article2">Calendar</a></li>
+                <li id="linkResources" class="slideUnder" title="Trezevant High Resources" alt="Trezevant High Resources"><a href="#resource-twit">Resources</a></li>
+              	<li id="linkFaculty" class="slideUnder" title="Trezevant High Faculty and Staff" alt="Trezevant High Faculty and Staff"><a href="faculty.html">Faculty</a>
                   <ul>
                     <li id="linkAdmin" class="slideUnderDrop"><a href="faculty.html">Administration</a></li>
                     <li id="linkOffice" class="slideUnderDrop"><a href="faculty.html#faculty">Office Staff</a></li>
-                    <li id="linkKind" class="slideUnderDrop"><a href="faculty.html#office">Kidergartin</a></li>
-                    <li id="linkFirst" class="slideUnderDrop"><a href="faculty.html#teachers">1st Grade</a></li>
-                    <li id="linkSecond" class="slideUnderDrop"><a href="faculty.html#first">2nd Grade</a></li>
-                    <li id="linkThird" class="slideUnderDrop"><a href="faculty.html#second">3rd Grade</a></li>
-                    <li id="linkFourth" class="slideUnderDrop"><a href="faculty.html#third">4th Grade</a></li>
-                    <li id="linkFifth" class="slideUnderDrop"><a href="faculty.html#fourth">5th Grade</a></li>
-                    <li id="linkSpecial" class="slideUnderDrop"><a href="faculty.html#fifth">Specialists</a></li>
+                    <li id="linkNineth" class="slideUnderDrop"><a href="faculty.html#ninth">9th Grade</a></li>
+                    <li id="linkTenth" class="slideUnderDrop"><a href="faculty.html#tenth">10th Grade</a></li>
+                    <li id="linkEleventh" class="slideUnderDrop"><a href="faculty.html#eleventh">11th Grade</a></li>
+                    <li id="linkTwelveth" class="slideUnderDrop"><a href="faculty.html#twelveth">12th Grade</a></li>
+                    <li id="linkSpecial" class="slideUnderDrop"><a href="faculty.html#Twelveth">Specialists</a></li>
                     <li id="linkStaff" class="slideUnderDrop"><a href="faculty.html#specialists">Staff</a></li>
                   </ul>
                 </li>
-                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a>
+                <li id="linkAbout" class="slideUnder" title="About Trezevant High" alt="About Trezevant High"><a href="#">About</a>
                   <ul>
-                    <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
-                    <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
-                    <li id="linkLeaders" class="slideUnderDrop"><a href="about.html#globalLeaders">Leaders</a></li>
-                    <li id="linkCourses" class="slideUnderDrop" title="Cordova Elementary Courses" alt="Contact Cordova Elementary"><a href="#">Courses</a></li>
-                    <li id="linkPhoto" class="slideUnderDrop" title="Cordova Elementary Photo Gallery" alt="Contact Cordova Elementary"><a href="#">Photos</a></li>
+                    <li id="linkCourses" class="slideUnderDrop" title="Trezevant High Courses" alt="Trezevant High Courses"><a href="#">Courses</a></li>
+                    <li id="linkPhoto" class="slideUnderDrop" title="Trezevant High Photo Gallery" alt="Trezevant High Photos"><a href="#">Photos</a></li>
                   </ul>
                 </li>
-                <li id="linkAthletics" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="#">Athletics</a>
+                <li id="linkAthletics" class="slideUnder" title="Athletics Trezevant High" alt="Athletics Trezevant High"><a href="#">Athletics</a>
                   <ul>
-                    <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
-                    <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
-                    <li id="linkLeaders" class="slideUnderDrop"><a href="about.html#globalLeaders">Leaders</a></li>
+                    <li id="linkBaseball" class="slideUnderDrop"><a href="faculty.html">Baseball</a></li>
+                    <li id="linkBasketball" class="slideUnderDrop"><a href="faculty.html#faculty">Basketball</a></li>
+                    <li id="linkBowling" class="slideUnderDrop"><a href="faculty.html#office">Bowling</a></li>
+                    <li id="linkCheer" class="slideUnderDrop"><a href="faculty.html#teachers">Cheer</a></li>
+                    <li id="linkFootball" class="slideUnderDrop"><a href="faculty.html#second">Football</a></li>
+                    <li id="linkSoftball" class="slideUnderDrop"><a href="faculty.html#third">Softball</a></li>
+                    <li id="linkTrack" class="slideUnderDrop"><a href="faculty.html#fourth">Track</a></li>
+                    <li id="linkVolleyball" class="slideUnderDrop"><a href="faculty.html#fifth">Volleyball</a></li>
                   </ul>
                 </li>
-             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerMain">Contact</a></li>
+             		<li id="linkContact" class="slideUnder" title="Contact Trezevant High" alt="Contact Trezevant High"><a href="#footerMain">Contact</a></li>
               </ul>
             </section>
           </nav>
@@ -243,6 +243,14 @@
           </div>
           <div class="large-12 large-centered small-12">
             <p>Trezevant High School empowers our students with the knowledge, character, and experiences to achieve in college and beyond.<!--<span class="readmore"><a href="about.html"> Read&nbsp;more...</a></span>--></p>
+            <div class="large-12 small-12">
+              <h3>Vision</h3>
+              <p>Trezevant High School will have moved from the bottom 5% to the top 25% of schools in Shelby County and Tennessee BY 2020.</p>
+            </div>
+            <div class="large-12 small-12">
+              <h3>Philosophy</h3>
+              <p>Trezevant High School believes that with great teaching, high expectations and structured learning environment; all students will excel.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -372,7 +380,7 @@
   <!-- GLOBAL LEADERS -->
   <section id="global">
     <div class="large-12">
-      <h1>Developing Global<br />Leaders and Learners</h1>
+      <h1>Top 25% of Schools<br />in Shelby County By 2020</h1>
       <div class="graphicEle">
         <img src="img/graphic.png" alt="Small red, horizontal graphic" border="0">
       </div>
@@ -537,7 +545,7 @@
     <!-- FOOTER -->
     <footer id="footerMain" class="footer row">
       <!--MAP-->
-      <div id="map_canvas" class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
+      <div id="map_canvas" class="map" alt="Google map of Trezevant High in Cordova, Tennessee"></div>
       <!-- END MAP -->
 
       <div id="footContact" class="large-12 columns">
@@ -549,9 +557,9 @@
       </div>
       <div id="footAddress" class="large-12 small-12 columns">
         <div class="large-3 medium-12 small-12 columns">
-          <h2>Cordova Elementary</h2>
+          <h2>Trezevant High</h2>
           <p>3350 N. Trezevant Street<br />Memphis, TN 38127<br />
-          <a href="https://www.google.com/maps/place/3350+N+Trezevant+St,+Memphis,+TN+38127/@35.2165077,-89.9792518,17z/data=!3m1!4b1!4m5!3m4!1s0x887f7f8a239178d5:0x6758a5bb1afcba50!8m2!3d35.2165077!4d-89.9770631" target="_blank" alt="Get Directions to Cordova Elementary">Get Directions/View Map</a><br />
+          <a href="https://www.google.com/maps/place/3350+N+Trezevant+St,+Memphis,+TN+38127/@35.2165077,-89.9792518,17z/data=!3m1!4b1!4m5!3m4!1s0x887f7f8a239178d5:0x6758a5bb1afcba50!8m2!3d35.2165077!4d-89.9770631" target="_blank" alt="Get Directions to Trezevant High">Get Directions/View Map</a><br />
           <span>School Hours: </span>7:15 AM - 2:15 PM</p>
         </div>
         <div class="large-3 medium-12 columns">
